@@ -5,7 +5,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 2
-SUBLEVEL = 9
+SUBLEVEL = 10
 #EXTRAVERSION = -rc3
 #NAME=Zonked Quokka
 
