@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Thu Apr 14 22:21:55 2005
+# Wed May  4 16:36:21 2005
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LH7952X=y
@@ -72,6 +72,7 @@ CONFIG_CMD_GO=y
 CONFIG_CMD_WAIT=y
 CONFIG_CMD_XRECEIVE=y
 CONFIG_CMD_EMAC_LH79524=y
+# CONFIG_CMD_EMAC_LH79524_DIAG is not set
 
 #
 # Generic Drivers
